[package]
name = "exhibit-plonkup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonkup = {git = "https://github.com/anoma/plonkup", branch = "exhibit"}
rand = "0.8"
rand_core = {version = "0.5", features = ["std"], default-features = false}